# alpaka3

./: .gersemirc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  codecov.yml  context7.json
.github/workflows/: ci.yml
agent-tests/: CMakeLists.txt  CMakeLists.txt.bak  CMakeListsOpenMP.txt  CMakeListsOptimized.txt  Makefile  OPTIMIZATION_ANALYSIS.md  README.md  SUMMARY.md  build_all.sh  build_cuda.sh  build_openmp.sh  cmake_install.cmake  compare_all_versions.sh  matrixAdd.cpp  matrix_mul_advanced_optimizations.md  matrix_mul_comparison.sh  matrix_mul_comparison_clean.sh  run_all.sh  run_all_tests.sh  test_cmake.cmake  vectorAdd10M-working
agent-tests/alpaka/: Makefile  alpakaConfig.cmake  cmake_install.cmake
agent-tests/blablador/: CMakeLists.txt  matMul.cpp  vectorAdd.cpp
agent-tests/claude/: CMakeLists.txt
agent-tests/claude/src/: matMul.cpp  matMulOpt.cpp  matrixAdd.cpp  vectorAdd10M.cpp
agent-tests/src/: matMul.cpp  matMulOpt.cpp  matrixAdd.cpp
agent-tests/vibe/: CMakeLists.txt  README.md  collect_performance.sh  matrixAddSimple.cpp  matrixMulOptimized.cpp  matrixMulProper.cpp  matrixMulTiled.cpp  test_performance.sh  vectorAdd.cpp
benchmark/: CMakeLists.txt
benchmark/HACCmk/: CMakeLists.txt  README.md
benchmark/HACCmk/src/: helper.hpp  main_alpaka.cpp  main_orig.cpp  misc.hpp
benchmark/alloc/: CMakeLists.txt
benchmark/alloc/src/: alloc_benchmark.cpp
benchmark/babelstream/: CMakeLists.txt
benchmark/babelstream/src/: babelStreamCommon.hpp  babelStreamMainTest.cpp
benchmark/minibude/: CMakeLists.txt
benchmark/minibude/src/: main.cpp  minibude.hpp  physics.hpp  physics_minibude.hpp  physics_ref.hpp
cmake/: alpakaCommon.cmake  alpakaCompilePedantic.cmake  alpakaCuda.cmake  alpakaFetchContentFinalize.cmake  alpakaHip.cmake  alpakaHwloc.cmake  buildDependencies.cmake  common.cmake  finalize.cmake  riscv64-clang.toolchain.cmake  riscv64-gnu.toolchain.cmake
cmake/test/: StdSimd.cpp
cmake/tests/: StdSimd.cpp
docs/: Doxyfile  Doxyfile_dev
docs/snippets/: 10_memory.cpp  15_kernel.cpp  20_simdKernel.cpp  CMakeLists.txt  cheatsheet.cpp
docs/snippets/cheatsheet/: cheatsheet.cpp
docs/snippets/dataStorage/: datastorage_pitch.cpp  datastorage_writeable_datasource.cpp
docs/snippets/example/: 000_elementWiseMultiplication.cpp  00_vector.cpp  010_vector.cpp  020_device.cpp  030_queue.cpp  040_memory_allocation.cpp  041_memoryOperations.cpp  050_kernel.cpp  05_device.cpp  06_queue.cpp  070_views.cpp  080_multidim.cpp  090_kernelParallelism.cpp  10_memory.cpp  110_synchronization.cpp  120_sharedMemory.cpp  140_math.cpp  150_atomics.cpp  15_kernel.cpp  180_memFence.cpp  190_warp.cpp  191_intrinsics.cpp  200_vendorInterop.cpp  20_simdKernel.cpp  230_kernelFn.cpp  30_elementWiseMultiplication.cpp  CMakeLists.txt
docs/snippets/example/include/: docsTest.hpp
docs/snippets/fetchContent/: CMakeLists.txt
docs/source/: conf.py  index.rst
example/: CMakeLists.txt
example/alpaka-ls/: CMakeLists.txt
example/alpaka-ls/src/: libls.cpp  ls.cpp
example/boundaryIter/src/: boundaryIter.cpp
example/grayScale/: CMakeLists.txt  README.md
example/grayScale/src/: grayScale.cpp  grayScaleSimd.cpp
example/heatEquation2D/: CMakeLists.txt
example/heatEquation2D/src/: BoundaryKernel.hpp  StencilKernel.hpp  analyticalSolution.hpp  heatEquation2D.cpp  writeImage.hpp
example/nBody/src/: nBody.cpp
example/randomInit/: CMakeLists.txt
example/randomInit/src/: randomInit.cpp  randomInitNormal.hpp
example/scan/: CMakeLists.txt  README.md
example/scan/src/: common.hpp  exclusive_scan.cpp  inclusive_scan.cpp  scan.hpp  scan_executors.hpp  scan_improved.cpp  scan_improved.hpp  scan_main.hpp
example/tutorial/: CMakeLists.txt
example/tutorial/src/: 00_enumerate.cpp  01_queue.cpp  03_memory.cpp  04_views.cpp  05_kernel.cpp  06_cudaLikeKernel.cpp  07_chunkedData.cpp  config.h
example/vectorAdd/: CMakeLists.txt
example/vectorAdd/src/: vectorAdd.cpp
example/vendorApi/: CMakeLists.txt
example/vendorApi/src/: alpakaFn.hpp  cudaFn.hpp  fn.hpp  main.cpp
headerCheck/: CMakeLists.txt
include/alpaka/: CVec.hpp  KernelBundle.hpp  (+22 more)
sanitizers/: tsan_suppressions.txt
script/: create-single-header.sh
scripts/: create-single-header.sh
tests/: CMakeLists.txt
tests/integ/: block.cpp  cvecKernelCall.cpp  deviceGlobalMem.cpp  hostAcc.cpp  sharedMem.cpp  vec.cpp
tests/unit/: dict.cpp  handle.cpp  platform.cpp  queue.cpp
tests/unit/algorithm/: concurrent.cpp  iota.cpp  reduce.cpp  scan.cpp  transform.cpp  transformReduce.cpp
tests/unit/atomic/: atomic.cpp  atomicAdd.cpp
tests/unit/block/: block.cpp
tests/unit/concepts/: concepts.cpp
tests/unit/cvecKernelCall/: cvecKernelCall.cpp
tests/unit/deviceGlobalMem/: deviceGlobalMem.cpp
tests/unit/dict/: dict.cpp
tests/unit/event/: event.cpp
tests/unit/intrinsic/: clz.cpp  ffs.cpp  popc.cpp
tests/unit/math/: ADL.cpp  Buffer.hpp  ComplexDouble.cpp  ComplexFloat.cpp  DataGen.hpp  Defines.hpp  Double.cpp  Float.cpp  Functor.hpp  TestTemplate.hpp  executeOnComputeDevice.hpp  mathADL.cpp  mathComplexDouble.cpp  mathComplexFloat.cpp  mathDouble.cpp  mathFloat.cpp  mathFunctions.cpp  powMixedTypes.cpp  sincos.cpp
tests/unit/mem/: alloc.cpp  allocDeferred.cpp  concepts.cpp  constCorrectness.cpp  idxRange.cpp  keepAlive.cpp  lifetime.cpp  mdIterator.cpp  memFenceBasic.cpp  memFenceProducerConsumer.cpp  memcpy.cpp  subDataStorage.cpp
tests/unit/platform/: platform.cpp
tests/unit/precision/: precision.cpp
tests/unit/queue/: blockingQueue.cpp  kernelMD.cpp  queue.cpp
tests/unit/rand/: uniformReal.cpp
tests/unit/sharedMem/: sharedMem.cpp
tests/unit/simd/: alignment.cpp  simd.cpp  simdMask.cpp  where.cpp
tests/unit/tuple/: tuple.cpp
tests/unit/vec/: vec.cpp  vecConcepts.cpp
tests/unit/wait/: device.cpp  waitDevice.cpp
tests/unit/warp/: activemask.cpp  all.cpp  any.cpp  ballot.cpp  getSize.cpp  iota.cpp  shfl.cpp  shfl_down.cpp  shfl_up.cpp  shfl_xor.cpp  utils.hpp
(+334 files in other folders)
