#
# Copyright 2023 Benjamin Worpitz, Erik Zenker, Axel Hübl, Jan Stephan, René Widera, Jeffrey Kelling, Andrea Bocci,
#                Bernhard Manfred Gruber, Aurora Perego
# SPDX-License-Identifier: MPL-2.0
#

cmake_minimum_required(VERSION 3.25)
project(alpaka)

# This file's directory.
set(_alpaka_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})

# Compiler feature tests.
set(_alpaka_FEATURE_TESTS_DIR "${_alpaka_ROOT_DIR}/cmake/tests")
set(_alpaka_CMAKE_DIR "${_alpaka_ROOT_DIR}/cmake")
set(_alpaka_TESTING_DIR "${_alpaka_ROOT_DIR}/tests")
# Set include directories
set(_alpaka_INCLUDE_DIRECTORY "${_alpaka_ROOT_DIR}/include")

# CMake Options
option(alpaka_TESTING "Enable/Disable testing" OFF)
option(alpaka_DOCS "Enable/Disable documentation code snippet testing" OFF)
option(alpaka_BENCHMARKS "Enable/Disable benchmarks" OFF)
option(alpaka_EXAMPLES "Enable/Disable examples" OFF)
option(alpaka_HEADERCHECKS "Enable/Disable header check tests" OFF)

# only check for compiler support if this cmake is called with add_subdirectory or examples, benchmarks, ... should be compiled too
if(
    NOT PROJECT_NAME STREQUAL CMAKE_PROJECT_NAME
    OR (alpaka_TESTING OR alpaka_DOCS OR alpaka_BENCHMARKS OR alpaka_EXAMPLES OR alpaka_HEADERCHECKS)
)
    include(${_alpaka_CMAKE_DIR}/alpakaCommon.cmake)
endif()

if(alpaka_TESTING)
    include(CTest)
    enable_testing()
    add_subdirectory("${_alpaka_TESTING_DIR}")
endif()

if(alpaka_DOCS)
    include(CTest)
    enable_testing()
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/docs/snippets")
endif()

if(alpaka_BENCHMARKS)
    enable_testing()
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/benchmark")
endif()

if(alpaka_EXAMPLES)
    enable_testing()
    add_subdirectory(example)
endif()

if(alpaka_HEADERCHECKS)
    enable_testing()
    add_subdirectory(headerCheck)
endif()

# Installation and config
include(CMakePackageConfigHelpers)
include(GNUInstallDirs)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(
    FILES
        "${_alpaka_ROOT_DIR}/cmake/finalize.cmake"
        "${_alpaka_ROOT_DIR}/cmake/alpakaCommon.cmake"
        "${_alpaka_ROOT_DIR}/cmake/alpakaCuda.cmake"
        "${_alpaka_ROOT_DIR}/cmake/alpakaHip.cmake"
        "${_alpaka_ROOT_DIR}/cmake/alpakaOneApi.cmake"
        "${_alpaka_ROOT_DIR}/cmake/buildDependencies.cmake"
        "${_alpaka_ROOT_DIR}/cmake/common.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/alpaka
)

configure_package_config_file(
    ${_alpaka_ROOT_DIR}/cmake/alpakaConfig.cmake.in
    ${CMAKE_CURRENT_BINARY_DIR}/alpakaConfig.cmake
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/alpaka
)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/alpakaConfig.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/alpaka)

# copy tests to the installation
install(DIRECTORY ${_alpaka_TESTING_DIR} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR} USE_SOURCE_PERMISSIONS)

# File is required to validate the C++20 feature std::atomic_ref
install(FILES "${_alpaka_FEATURE_TESTS_DIR}/StdAtomicRef.cpp" DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/alpaka/tests)

# Load alpaka's languages after FetchContent_MakeAvailable()
#
# This macro must be called after FetchContent_MakeAvailable() used to load alpaka.
# The reason is that this is the only way in CMake allowing alpaka to load the required languages.
macro(alpaka_fetchcontent_finalize)
    include("${alpaka_SOURCE_DIR}/cmake/alpakaFetchContentFinalize.cmake")
endmacro()
